--- a/001/홀수합구하기.html
+++ b/001/홀수합구하기.html
@@ -11,11 +11,11 @@
         // 순번 1    2    3    4    5   6    7    8     9    10
         //   항 1    3    5    7    9   11   13   15   17   19
  
-        let a  = 1;
         let sum = 0;
+        let a  = 2;
 
-        for (let i = 1; i <= 10; i++) {
-            sum += a;  // 현재 홀수를 합에 더함
+        for (let i = 0; i <= 10; i++) {
+            for (j = 0; j<10; j++)  // 현재 홀수를 합에 더함
             a += 2;  // 다음 홀수
         }   
 
